Fixed openapi attributes path
